--- a/app/views/single-tweet.html
+++ b/app/views/single-tweet.html
@@ -52,11 +52,11 @@
 			<div class="action-favor">
 				<button class="favor" />	
 			</div>
-			<div class="action-more">
+			<!-- <div class="action-more">
 				<i class="fa fa-circle"></i>
 				<i class="fa fa-circle"></i>
 				<i class="fa fa-circle"></i>
-			</div>
+			</div> -->
 		</div>
 
 		<!-- detailed metadata -->
