--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -584,10 +584,40 @@
 					}
 				}
 				.action-more {
+					padding-top: 5px;
+					padding-bottom: 5px;
 					font-size: 6px;
 					color: #ADAFB0;
 					position: relative;
 					top: 2px;
+					.more-actions {
+						position: absolute;
+						min-width: 150px;
+						top: 15px;
+						transform: translateX(-2%);
+						padding: 6px 0;
+						background: #FFF none repeat scroll 0% 0% padding-box;
+						border: 0px solid rgba(0, 0, 0, 0.25);
+						border-radius: 4px;
+						box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+						ul {
+							margin: 0;
+							padding: 0;
+							li {
+								a {
+									font-size: 15px;
+									display: block;
+									padding: 2px 5px;
+									color: $search-grey;
+									text-align: center;
+									&:hover {
+										background-color: $search-twitter-blue;
+										color: white;
+									}
+								}
+							}
+						}
+					}
 				}
 			}
 
@@ -887,6 +917,8 @@
 							}
 						}
 						.action-more {
+							padding-top: 5px;
+							padding-bottom: 5px;
 							transition: all 0.3s ease-in-out;
 							font-size: 6px;
 							color: #ADAFB0;
@@ -1031,11 +1063,15 @@
 					}
 				}
 				.action-more {
+					padding-top: 5px;
+					padding-bottom: 5px;
 					font-size: 6px;
 					color: #ADAFB0;
 					position: relative;
 					top: 2px;
-					
+					&:hover {
+						cursor: pointer;
+					}
 				}
 			}
 			.detail-metadata {
