Adds fixes to #70

--- a/app/views/wall/landing.html
+++ b/app/views/wall/landing.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
-    <div class="container">
-        <section class="content-header">
+    <section class="content-header">
+        <div class="row">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -34,14 +34,13 @@
                     <span class="fa fa-angle-right"></span>
                 </a>
             </div>
-            <h1>
-        </section>
-        <section class="content">
-            <div class="box box-default">
-                <div class="box-body text-center">
-                    <a href="wall/create" class="btn text-center btn-primary btn-lg">Start your tweet wall now</a>
+            <div class="row">
+                <div class="box box-default">
+                    <div class="box-body text-center">
+                        <a href="wall/create" class="btn text-center btn-primary btn-lg">Start your tweet wall now</a>
+                    </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </div>
