Fixes #112 - Adds transparent loklak cow logo on sidebar collapse

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -4,9 +4,9 @@
         <!-- Logo -->
         <a href="index2.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>A</b>LT</span>
+          <span class="logo-mini"><img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak Logo"></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Loklak</b></span>
+          <span class="logo-lg"><b><code>Loklak</code></b></span>
         </a>
 
         <!-- Header Navbar -->
