Minor css change to single-tweet detail-metadata

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1079,7 +1079,7 @@
 			.detail-metadata {
 				color: $search-grey;
 				margin-top: 11px;
-				text-align: right;
+				text-align: left;
 			}
 			// Processing imgs layout
 				.images-wrapper {
