--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,8 +1,8 @@
 <div ng-attr-id="{{data.id_str}}" ng-click="toggleDetail($event)" class="tweet tweet-simple">
-    <img fallback-status-id="{{data.id_str}}" class="avatar" 
+    <img fallback-status-id="data.user.screen_name" class="avatar" 
          fallback-src="/images/anon_200x200.png"
     	 ng-src="{{data.user.profile_image_url_https}}" alt="user-images">
-         
+
     <div class="tweet-content">
 
     	<!-- Metadata -->
