--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -1,6 +1,12 @@
+
 <div class="content-wrapper">
-    <leaflet center="center" layers="layers" width="640px" height="480px"></leaflet>
-    <h3>Map should show up here!</h3>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+   <div id="map" style="width:100%; height:800px"></div>
+
+
+
 </div>
+
+
 
 
