--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,7 +16,7 @@
 
 body {
     font-family: Helvetica, sans-serif;
-    background-color: $background-light;
+    background-color: #F5F8FA;
 }
 
 .navbar {
