Fixed carousel and added line height for tweet text

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -622,6 +622,7 @@ body {
             word-break: break-all;
             color: #292f33;
             font-size: 28px;
+            line-height: 120%;
             .linear-hashtag {
                 color: #55ACEE;
             }
