--- a/app/views/wall/landing.html
+++ b/app/views/wall/landing.html
@@ -1,5 +1,5 @@
-<div class="content-wrapper">
-    <section class="content-header">
+<div class="container-fluid content-wrapper">
+    <section class="container content-header">
         <div class="row">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -9,19 +9,19 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="http://placehold.it/1100x400/39CCCC/ffffff&amp;text=Loklak+is+awesome" alt="First slide">
+                        <img style="display: block; margin:auto;" class="img-responsive" src="http://placehold.it/1100x400/39CCCC/ffffff&amp;text=Loklak+is+awesome" alt="First slide">
                         <div class="carousel-caption">
                             First Slide
                         </div>
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1100x400/3c8dbc/ffffff&amp;text=Loklak+is+awesome" alt="Second slide">
+                        <img style="display: block; margin:auto;" class="img-responsive" src="http://placehold.it/1100x400/3c8dbc/ffffff&amp;text=Loklak+is+awesome" alt="Second slide">
                         <div class="carousel-caption">
                             Second Slide
                         </div>
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1100x400/f39c12/ffffff&amp;text=Loklak+is+awesome" alt="Third slide">
+                        <img style="display: block; margin:auto;" class="img-responsive" src="http://placehold.it/1100x400/f39c12/ffffff&amp;text=Loklak+is+awesome" alt="Third slide">
                         <div class="carousel-caption">
                             Third Slide
                         </div>
