Create a inject new debug service, modify debug directive to render videos, and instagram imgs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -968,6 +968,10 @@
 						display: inline-block;
 					}
 				}
+				.debugged-link-container {
+					max-height: 700px;
+					overflow: hidden;
+				}
 			}
 		}
 	}
