--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -12,9 +12,19 @@
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
+          <div class="container-fluid">
+            
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
           </a>
+          <div class="navbar-header page-scroll">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+              </button>
+
+            </div>
+              <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
             <li ng-repeat="navItem in root.topNavItems"><a ng-href="{{navItem.link}}">{{navItem.title}}</a></li>
 
@@ -30,7 +40,7 @@
             </li> -->
           </ul>
 
-
+      
           <!-- Navbar Right Menu -->
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
@@ -169,5 +179,7 @@
               </li>
             </ul>
           </div>
+        </div>
+        </div>
         </nav>
       </header>
